--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.0",
